--- a/CascadeWebApp/wwwroot/app.css
+++ b/CascadeWebApp/wwwroot/app.css
@@ -57,6 +57,9 @@ h1:focus {
 
 .modal-body {
     margin-bottom: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .close {
